2008-10-06  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.2

2008-10-02  Jeffrey Stedfast  <fejj@novell.com>

	* gtk-doc.make: More parallel-install fixes so that devhelp
	actually works. Patch to gtk-doc.make submitted upstream.

2008-10-02  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for bug #554830

	* mono/Makefile.am: Don't hard-code the API version.

	* mono/gmime-sharp-2.4.pc.in: Fixed incorrect path to include the
	API_VERSION.

	* gmime-2.4.pc.in: Similar fixes.

	* configure.in: Define GMIME_API_VERSION

2008-10-02  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.1

2008-10-02  Jeffrey Stedfast  <fejj@novell.com>

	* gtk-doc.make: Allow for a versioned install of the
	gtk-docs. Completes the fix for bug #554121.

	* docs/reference/Makefile.am: Define a DOC_MODULE_VERSION

	* mono/Makefile.am: Fix PACKAGE_SHARP to be versioned. Partial fix
	for bug #554121.

	* gmime/gmime-parser.c: Made the headerbuf allocator a little less
	liberal in the amount it allocates.

2008-09-25  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-stream.c (stream_length): Implemented a default
	solution using g_mime_stream_seek().

2008-09-25  Jeffrey Stedfast  <fejj@novell.com>

	* README: Bumped version

	* configure.in: Bumped version to 2.4.0

2008-09-18  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_text): Check if
	rfc2047-workarounds has been enabled at runtime.

	* gmime/gmime.h (GMIME_ENABLE_RFC2047_WORKAROUNDS): New
	g_mime_init() flag so that a programmer can enable rfc2047
	workarounds at runtime.

	* gmime/gmime.c (g_mime_init): Save the init flags.

	* gmime/internet-address.c (internet_address_group_set_members):
	Add an event listener to the new members, not the unref'd old
	member list. Thanks to Peter Bloomfield for spotting this.

2008-09-18  Jeffrey Stedfast  <fejj@novell.com>
